tests/baselines/reference/nameWithFileExtension.errors.txt
==== tests/cases/compiler/foo_1.ts (3 errors) ====
    import foo = require('./foo_0.js');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module ''./foo_0.js''.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    var x = foo.foo + 42;
            ~~~
!!! error TS2095: Could not find symbol 'foo'.
    
==== tests/cases/compiler/foo_0.ts (0 errors) ====
    export var foo = 42;
    